infra/k8s/ingress/ingress.yaml
# Notes
# Before applying, follow https://aws.amazon.com/blogs/opensource/network-load-balancer-nginx-ingress-controller-eks/

# Further reading:
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - anthonycornell.com
      secretName: tls-secret
  rules:
    - host: a517d3f9a507e4e64a8752c0f336958b-76abc6f18b5caf04.elb.eu-central-1.amazonaws.com
      http:
        paths:
          - path: /simple-webserver
            backend:
              serviceName: simple-web-server-service
              servicePort: 8081
          - path: /banana
            backend:
              serviceName: banana-service
              servicePort: 5678
